--- a/jaxb-ri/runtime/impl/pom.xml
+++ b/jaxb-ri/runtime/impl/pom.xml
@@ -117,7 +117,9 @@ holder.
                                 <configuration>
                                     <compilerArgs>
                                         <arg>--add-modules</arg>
-                                        <arg>java.activation</arg>
+                                        <arg>java.xml.bind</arg>
+                                        <arg>--upgrade-module-path</arg>
+                                        <arg>${endorsed.dir}</arg>
                                     </compilerArgs>
                                 </configuration>
                             </execution>
@@ -127,7 +129,10 @@ holder.
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
-                            <argLine>--add-modules java.activation</argLine>
+                            <argLine>
+                                --add-modules java.xml.bind
+                                --upgrade-module-path ${endorsed.dir}
+                            </argLine>
                         </configuration>
                     </plugin>
                     <plugin>
