remove code duplications
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>

--- a/jaxb-ri/jaxb-jxc-jdk9/pom.xml
+++ b/jaxb-ri/jaxb-jxc-jdk9/pom.xml
@@ -54,6 +54,7 @@ holder.
     <groupId>org.glassfish.jaxb</groupId>
     <artifactId>jaxb-jxc-jdk9</artifactId>
     <packaging>jar</packaging>
+    <name>JAXB JXC (jdk9)</name>
 
     <dependencies>
         <dependency>
